# microunit

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/: fetch_version.py
.github/workflows/: changelog_entry.yaml  main.yml  pr.yaml  versioning.yaml
changelog.d/: init-microunit-package.added.md
src/microunit/: __init__.py  core.py  diagnostics.py  registry.py  rule_helpers.py  tax_unit_construction.py
src/microunit/data/: dependent_gross_income_limit.yaml
src/microunit/units/: __init__.py  _helpers.py  medicaid.py  passthrough.py  programs.py  snap.py  spm.py  tax.py
tests/: test_core.py  test_diagnostics.py  test_import.py  test_tax_partition_adapter.py  test_tax_unit_construction.py  test_units.py
