[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microunit"
# Base version; CI (.github/workflows/versioning.yaml) bumps this from the
# changelog.d fragments on merge to main, so the first release publishes 0.1.0.
version = "0.0.0"
description = "Policy unit assignment for PolicyEngine's microdata stack"
readme = "README.md"
license = "MIT"
authors = [
    { name = "PolicyEngine", email = "hello@policyengine.org" }
]
keywords = [
    "microdata",
    "unit-assignment",
    "microplex",
    "tax-units",
    "spm",
    "policy-simulation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "build>=1.0",
    "towncrier>=24.8.0",
]

[project.urls]
Repository = "https://github.com/PolicyEngine/microunit"

[tool.hatch.build.targets.wheel]
packages = ["src/microunit"]
# Ship packaged rule data (the qualifying-relative gross income limit YAML)
# alongside the Python modules.
artifacts = ["src/microunit/data/*.yaml"]

[tool.hatch.build.targets.sdist]
include = [
    "src/microunit",
    "tests",
    "README.md",
    "CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.towncrier]
package = "microunit"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true
